# python-playground

./: .gitignore
src/bar/: __init__.py  pyproject.toml
src/foo/: __init__.py  pyproject.toml
