[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-playground-foo"
requires-python = ">=3.11"
description = ""
authors = [
    { name = "Mike Carey", email = "mike-carey@users.noreply.github.com" },
]
license = { "text" = "GPL-3.0-or-later" }

dynamic = ["version"]

dependencies = [
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.1.3",
    "coverage == 6.4.4",
    "pytest-cov == 3.0.0",
]
